All_Component_DX/force-app/main/default/objects/SM_Crew_Resource__c/SM_Crew_Resource__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This is the technician which is assigned to the Crew.</description>
    <label>Crew Resource</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crew Resource</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>