All_Component_DX/force-app/main/default/objects/SM_Crew_Resource__c/fields/SM_Crew__c.field-meta.xml
<CustomField>
    <fullName>SM_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Crew to which this resource belongs.</description>
    <label>Crew</label>
    <referenceTo>SM_Crew__c</referenceTo>
    <relationshipLabel>Crew Resource</relationshipLabel>
    <relationshipName>Crew_Resource</relationshipName>
    <type>Lookup</type>
</CustomField>