All_Component_DX/force-app/main/default/objects/SM_Crew_Resource__c/fields/SM_Crew_Leader__c.field-meta.xml
<CustomField>
    <fullName>SM_Crew_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates whether this resource is the leader of the Crew.</description>
    <label>Crew Leader</label>
    <type>Checkbox</type>
</CustomField>