All_Component_DX/force-app/main/default/objects/SM_Crew_Resource__c/fields/SM_Crew_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Crew_Resource_Name__c</fullName>
    <description>The Name of the resource.</description>
    <label>Crew Resource Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>