All_Component_DX/force-app/main/default/objects/SM_Crew_Resource__c/fields/SM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_End_Date__c</fullName>
    <description>The date until when this resource is assigned to the Crew.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>