All_Component_DX/force-app/main/default/objects/SM_Crew_Resource__c/fields/SM_Resource__c.field-meta.xml
<CustomField>
    <fullName>SM_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The technician associated to this resource.</description>
    <label>Resource</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>Crew Resource</relationshipLabel>
    <relationshipName>Crew_Resource</relationshipName>
    <type>Lookup</type>
</CustomField>